<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/guess_a_number_between_1_and_100"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/guessEditText"
        android:layout_width="201dp"
        android:layout_height="61dp"
        android:layout_below="@id/instructionsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_guess"
        android:inputType="number" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="197dp"
        android:layout_height="73dp"
        android:layout_below="@id/guessEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#044A81"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:layout_below="@id/submitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/additionGameButton"
        android:layout_width="215dp"
        android:layout_height="66dp"
        android:layout_below="@id/resultTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="89dp"
        android:text="@string/addition_game"
        android:backgroundTint="#044A81"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/bottomImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/additionGameButton"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:src="@drawable/view"
    android:contentDescription="@string/image_description" />



</RelativeLayout>
